<resources>
    <string name="app_name">DeliveryTruckBooking_DilipBam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">New user? <u><b>Signup here</b></u></string>
    <string name="title_activity_truckers_nepal_maps">Map</string>
</resources>